refactor(test): migrate JUnit 4 tests to JUnit 5
Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>